# KodeXimi

./: .gitattributes  .gitignore  ALPHA_NOTICE.md  LICENSE  README.md  pyproject.toml
.agents/plugins/: marketplace.json
cli/: kodeximi.ps1
codex/: AGENTS_SNIPPET.md
codex/plugin-lite/: COMMAND_PROTOCOL.md  README.md  REVIEW_CHECKLIST.md  TASKSPEC_GUIDE.md
docs/: alpha-limitations.md  architecture-v0.1.md  architecture.md  github-alpha-release-checklist.md  implementation-plan-v0.1.md  roadmap.md  security-model.md
docs/research/: 2026-05-21-conclusions-and-validation.md  2026-05-21-kodeximi-evolution.md  2026-05-21-kodeximi-prior-art.md  2026-05-21-overview.md  2026-05-21-product-design.md  2026-05-21-v0.1-quality-core.md
examples/batch-independent-code/: BATCH_MANIFEST.json  BATCH_TASK.md
examples/hello-worker/: RESULT.md  TASK.md  VERIFY.md  status.json
examples/single-code-change/: TASK.md
examples/structured-input-discovery/: TASK.md
examples/v0.1-fake-code-edit/: README.md  task.json
kimi/agents/: codex-worker-system.md  codex-worker.yaml
scripts/: dev-doctor.ps1  dev-test.ps1  doctor.ps1  install.ps1  uninstall.ps1  verify-install.ps1
scripts/spikes/: wire_code_edit_job.py  wire_initialize.py  wire_inventory_job.py
src/kodeximi/: __init__.py  approval.py  cli.py  config.py  errors.py  evidence.py  job.py  jsonio.py  path_policy.py  review.py  (+8 more)
tests/: test_approval.py  test_boundary.py  test_example_specs.py  test_fake_job.py  test_plugin_manifest.py  test_session_and_cli.py  test_task_spec.py  test_transport.py  test_wire_smoke.py
(+26 files in other folders)
