[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kodeximi"
version = "0.1.0a0"
description = "Codex-first local delegation runtime for Kimi CLI workers"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "KodeXimi contributors" }]
dependencies = []

[project.scripts]
kodeximi = "kodeximi.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

